# dal/model/https_command.gen.go
@@ -4,19 +4,23 @@
 
 package model
 
+import (
+	"encoding/json"
+)
+
 const TableNameHTTPSCommand = "https_command"
 
 // HTTPSCommand mapped from table <https_command>
 type HTTPSCommand struct {
-	ID                int32   `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
-	CommandID         *int32  `gorm:"column:command_id" json:"command_id"`
-	Method            *string `gorm:"column:method" json:"method"`
-	URL               string  `gorm:"column:url;not null" json:"url"`
-	AuthorizationType *string `gorm:"column:authorization_type" json:"authorization_type"`
-	Params            *string `gorm:"column:params" json:"params"`
-	Header            *string `gorm:"column:header" json:"header"`
-	BodyType          *string `gorm:"column:body_type" json:"body_type"`
-	Body              *string `gorm:"column:body" json:"body"`
+	ID                int32           `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
+	CommandID         *int32          `gorm:"column:command_id" json:"command_id"`
+	Method            string          `gorm:"column:method;not null" json:"method"`
+	URL               string          `gorm:"column:url;not null" json:"url"`
+	AuthorizationType *string         `gorm:"column:authorization_type" json:"authorization_type"`
+	Params            json.RawMessage `gorm:"column:params" json:"params"`
+	Header            json.RawMessage `gorm:"column:header" json:"header"`
+	BodyType          *string         `gorm:"column:body_type" json:"body_type"`
+	Body              json.RawMessage `gorm:"column:body" json:"body"`
 }
 
 // TableName HTTPSCommand's table name
