# dal/model/mqtt_command.gen.go
@@ -4,16 +4,20 @@
 
 package model
 
+import (
+	"encoding/json"
+)
+
 const TableNameMqttCommand = "mqtt_command"
 
 // MqttCommand mapped from table <mqtt_command>
 type MqttCommand struct {
-	ID        int32   `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
-	CommandID *int32  `gorm:"column:command_id" json:"command_id"`
-	Topic     *string `gorm:"column:topic" json:"topic"`
-	Header    *string `gorm:"column:header" json:"header"`
-	Message   *string `gorm:"column:message" json:"message"`
-	Type      *string `gorm:"column:type" json:"type"`
+	ID        int32           `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
+	CommandID *int32          `gorm:"column:command_id" json:"command_id"`
+	Topic     string          `gorm:"column:topic;not null" json:"topic"`
+	Header    json.RawMessage `gorm:"column:header" json:"header"`
+	Message   json.RawMessage `gorm:"column:message" json:"message"`
+	Type      string          `gorm:"column:type;not null" json:"type"`
 }
 
 // TableName MqttCommand's table name
