# dal/model/redis_command.gen.go
@@ -4,17 +4,21 @@
 
 package model
 
+import (
+	"encoding/json"
+)
+
 const TableNameRedisCommand = "redis_command"
 
 // RedisCommand mapped from table <redis_command>
 type RedisCommand struct {
-	ID        int32   `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
-	CommandID *int32  `gorm:"column:command_id" json:"command_id"`
-	Password  *string `gorm:"column:password" json:"password"`
-	Db        *int32  `gorm:"column:db" json:"db"`
-	Topic     *string `gorm:"column:topic" json:"topic"`
-	Message   *string `gorm:"column:message" json:"message"`
-	Type      *string `gorm:"column:type" json:"type"`
+	ID        int32           `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
+	CommandID *int32          `gorm:"column:command_id" json:"command_id"`
+	Password  *string         `gorm:"column:password" json:"password"`
+	Db        *int32          `gorm:"column:db" json:"db"`
+	Topic     *string         `gorm:"column:topic" json:"topic"`
+	Message   json.RawMessage `gorm:"column:message" json:"message"`
+	Type      string          `gorm:"column:type;not null" json:"type"`
 }
 
 // TableName RedisCommand's table name
