# dal/model/task_template.gen.go
@@ -1,25 +1,0 @@
-// Code generated by gorm.io/gen. DO NOT EDIT.
-// Code generated by gorm.io/gen. DO NOT EDIT.
-// Code generated by gorm.io/gen. DO NOT EDIT.
-
-package model
-
-import (
-	"time"
-)
-
-const TableNameTaskTemplate = "task_template"
-
-// TaskTemplate mapped from table <task_template>
-type TaskTemplate struct {
-	ID        int32      `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
-	Name      *string    `gorm:"column:name" json:"name"`
-	Variable  *string    `gorm:"column:variable" json:"variable"`
-	UpdatedAt *time.Time `gorm:"column:updated_at;default:CURRENT_TIMESTAMP" json:"updated_at"`
-	CreatedAt *time.Time `gorm:"column:created_at;default:now()" json:"created_at"`
-}
-
-// TableName TaskTemplate's table name
-func (*TaskTemplate) TableName() string {
-	return TableNameTaskTemplate
-}
