# dal/model/time_template.gen.go
@@ -15,7 +15,7 @@ type TimeTemplate struct {
 	ID         int32      `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
 	Name       string     `gorm:"column:name;not null" json:"name"`
 	TimeDataID int32      `gorm:"column:time_data_id;not null" json:"time_data_id"`
-	UpdatedAt  *time.Time `gorm:"column:updated_at;default:CURRENT_TIMESTAMP" json:"updated_at"`
+	UpdatedAt  *time.Time `gorm:"column:updated_at" json:"updated_at"`
 	CreatedAt  *time.Time `gorm:"column:created_at;default:now()" json:"created_at"`
 	TimeData   TimeDatum  `gorm:"foreignKey:time_data_id" json:"time_data"`
 }
